--- a/frontend/src/components/todo/layout.html
+++ b/frontend/src/components/todo/layout.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+    <a href="javascript:;" id="add-todo" class="btn btn-primary pull-right">Nuevo Todo</a>
     <div id="todos"></div>
   </div>
 </div>
